--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native-gesture-handler": "^1.5.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
+    "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.3",
     "reactotron-react-native": "^4.0.2",
     "reactotron-redux": "^3.1.2",
