altera nome do storeFile

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,7 +150,7 @@ android {
             keyPassword 'android'
         }
         release {
-            storeFile file(MYAPP_UPLOAD_STORE_FILE)
+            storeFile file('gympoint.keystore')
             storePassword MYAPP_UPLOAD_STORE_PASSWORD
             keyAlias MYAPP_UPLOAD_KEY_ALIAS
             keyPassword MYAPP_UPLOAD_KEY_PASSWORD
