adiciona caminho para keystore do appcenter

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,7 +150,7 @@ android {
             keyPassword 'android'
         }
         release {
-            storeFile file('gympoint.keystore')
+            storeFile rootProject.file("app/gympoint.keystore")
             storePassword System.getProperty("APPCENTER_KEYSTORE_PASSWORD")
             keyAlias System.getProperty("APPCENTER_KEY_ALIAS")
             keyPassword System.getProperty("APPCENTER_KEY_PASSWORD")
