--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint --fix . --ext .js"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.3",
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.5",
     "immer": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-native-gesture-handler": "^1.5.0",
